<resources>
    <string name="app_name">Work_4</string>
    <string name="todo">todo</string>
    <string name="log">登录</string>
    <string name="input">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="remember">记住密码</string>
    <string name="register">注册</string>
    <string name="app">期末快乐！</string>
    <string name="music">音乐</string>
    <string name="jump">JUMP</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="title_activity_music">MusicActivity</string>
</resources>
