<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
        android:name="com.dongyiying.work_4.Fragment_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/TODO" />
    <Button
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"/>
    <Button
        android:id="@+id/pause"
        android:text="@string/pause"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/stop"
        android:text="@string/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>