<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.dongyiying.work_4.MusicActivity"
    >
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginRight="10dp"
            android:text="@string/play"
            android:id="@+id/bt_music_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/bt_music_pause"
            android:text="@string/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginLeft="10dp"
            android:text="@string/stop"
            android:id="@+id/bt_music_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>








</LinearLayout>