<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dongyiying.work_4.LogActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#788efa">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left|center"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_back"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/log"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_photo" />

    <EditText
        android:id="@+id/edit_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:autofillHints="@string/input"
        android:hint="@string/input"
        android:inputType="number"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edit_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="number"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/save_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/remember" />

        <Button
            android:id="@+id/bt_register1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/register" />
    </LinearLayout>

    <Button
        android:id="@+id/button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="#788efa"
        android:text="@string/log"
        android:textColor="#ffffff"
        android:textSize="25sp" />

</LinearLayout>