<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.dongyiying.work_4.MainActivity">
    <TextView
        android:layout_marginTop="20dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app"
        android:textSize="30sp"
        android:typeface="monospace" />
    <TextView
        android:textSize="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_play"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/music"
            android:gravity="center"
            android:textSize="20sp"
            android:typeface="monospace" />
        <Button
            android:layout_gravity="center"
            android:id="@+id/bt_jump_1"
            android:text="@string/jump"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <ImageView
            android:src="@drawable/ic_photoalbum"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/photo"
            android:textSize="20sp"
            android:typeface="monospace" />
        <Button
            android:layout_gravity="center"
            android:id="@+id/bt_jump_2"
            android:text="@string/jump"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_video"
            android:id="@+id/video"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/video"
            android:gravity="center"
            android:textSize="20sp"
            android:typeface="monospace" />
        <Button
            android:layout_gravity="center"
            android:id="@+id/bt_jump_3"
            android:text="@string/jump"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <ImageView
        android:layout_gravity="center"
        android:padding="20dp"
        android:src="@drawable/ic_happy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>